# arca

./: -a  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  mock_api.py
benchmarks/: run.sh
benchmarks/algorithm/: fib.arca  fib.go  fib.js  fib.rs  prime.arca  prime.go  prime.js  prime.rs  sort.arca  sort.go  sort.js  sort.rs
benchmarks/results/: benchmark_20260721_012853.txt  benchmark_20260721_013147.txt  benchmark_20260721_013354.txt  benchmark_20260721_013735.txt  benchmark_20260721_013836.txt  benchmark_20260721_094005.txt  benchmark_20260721_094213.txt  benchmark_20260721_094424.txt  benchmark_20260721_094737.txt  benchmark_20260721_095317.txt  benchmark_20260721_100032.txt  benchmark_20260721_100550.txt  benchmark_20260721_100802.txt  benchmark_20260721_101222.txt  benchmark_20260721_101630.txt  benchmark_20260721_101709.txt  benchmark_20260721_102147.txt  benchmark_20260721_103629.txt  benchmark_20260721_103912.txt
benchmarks/web_api/: Cargo.toml  bench_client.js  go.mod  server.arca  server.go  server.js  server.rs
crates/arca-air/: Cargo.toml
crates/arca-air/src/: builder.rs  lib.rs  nodes.rs  opt.rs  verifier.rs
crates/arca-air/tests/: air_tests.rs
crates/arca-ast/: Cargo.toml
crates/arca-ast/src/: lib.rs  symbol.rs
crates/arca-backend/: Cargo.toml
crates/arca-backend/src/: lib.rs
crates/arca-backend/tests/: backend_tests.rs
crates/arca-borrowck/: Cargo.toml
crates/arca-borrowck/src/: checker.rs  lib.rs  state.rs
crates/arca-capabilities/: Cargo.toml
crates/arca-capabilities/src/: checker.rs  lib.rs  model.rs
crates/arca-capabilities/tests/: capability_tests.rs
crates/arca-cli/: Cargo.toml
crates/arca-cli/src/: main.rs
crates/arca-cli/tests/: language_test.rs
crates/arca-diagnostics/: Cargo.toml
crates/arca-ffi/: Cargo.toml
crates/arca-fmt/: Cargo.toml
crates/arca-hir/: Cargo.toml
crates/arca-hir/src/: lib.rs
crates/arca-hir/tests/: hir_tests.rs
crates/arca-lexer/: Cargo.toml
crates/arca-lsp/: Cargo.toml
crates/arca-modules/: Cargo.toml
crates/arca-modules/src/: lib.rs  manifest.rs  resolver.rs
crates/arca-modules/tests/: module_tests.rs
crates/arca-parser/: Cargo.toml
crates/arca-pkg/: Cargo.toml
crates/arca-pkg/src/: lib.rs  lockfile.rs  manager.rs
crates/arca-pkg/tests/: pkg_tests.rs
crates/arca-rt/: Cargo.toml
crates/arca-stdlib/: Cargo.toml
crates/arca-typechecker/: Cargo.toml
crates/arca-typechecker/src/: checker.rs  env.rs  lib.rs  types.rs
crates/arca-typechecker/tests/: checker_tests.rs  error_handling_tests.rs
examples/: ai_test.arca  allocators.arca  arithmetic.test.arca  capabilities_polymorphism.arca  collections.arca  comptime_reflection.arca  compute.arca  concurrency.arca  demo.arca  destructuring.arca  error_handling.arca  ffi_native_c.arca  fib.arca  fluent_chaining.arca  http_server.arca  if_else.test.arca  json_api.arca  live_http_server.arca  loop.test.arca  pipeline.arca  prime.arca  real_crud_api.arca  rest_api.arca  rest_api_example.arca  showcase.arca  sort.arca  std_crypto_compress.arca  std_demo.arca  std_json_os_process.arca  std_library.arca  strings.arca  struct.test.arca  variables.test.arca  web_service.arca
examples/challenges/: expression_eval.arca  statistics.arca  todo_cli.arca
scripts/: bump_version.sh  install.sh
tests/: bench.sh  run_all.sh  run_challenges.sh  run_codegen.sh  run_parse.sh  run_runtime.sh  run_semantic.sh  run_tests.sh
tests/codegen/: branching.arca  calls.arca  simple.arca
tests/features/: borrow.test.arca  comparison.test.arca  compress.test.arca  defer.test.arca  enum.test.arca  fs.test.arca  functions.test.arca  impl.test.arca  import.test.arca  json.test.arca  log.test.arca  loop.test.arca  match_payload.test.arca  method.test.arca  move.test.arca  parse_int.test.arca  path.test.arca  process.test.arca  serve.test.arca  sleep.test.arca  string.test.arca  string_slice.test.arca  strings.test.arca  struct.test.arca  timing.test.arca  while_loop.test.arca
tests/logs/: challenge_latest.txt  challenge_raw_latest.txt  codegen_latest.txt  codegen_raw_latest.txt  latest_test_log.txt  parse_latest.txt  parse_raw_latest.txt  raw_latest.txt  runtime_latest.txt  runtime_raw_latest.txt  semantic_latest.txt  semantic_raw_latest.txt  test_log_1784744364.txt  test_log_1784744895.txt  test_log_1784745051.txt  test_log_1784745068.txt  test_log_1784745078.txt  test_log_1784745165.txt  test_log_1784745195.txt  test_log_1784745214.txt  test_log_1784745245.txt  test_log_1784745261.txt  test_log_1784745277.txt  test_log_1784745294.txt  test_log_1784745314.txt  test_log_1784745381.txt  test_log_1784745527.txt  test_log_1784745546.txt  test_log_1784745610.txt  test_log_1784745711.txt  test_log_1784745737.txt  test_log_1784745797.txt  test_log_1784745812.txt  test_log_1784745845.txt  test_log_1784745869.txt
tests/parse/: simple.arca  struct_literal.arca  variables.arca
tests/regression/: ai_chat.arca  collections_structs.arca  compress_crypto.arca  iterator_chain.arca  json_stringify.arca  log_info.arca  os_queries.arca
tests/semantic/: check_borrow.arca  check_simple.arca  type_mismatch_invalid.arca
tests/std-libs/: ai.test.arca  async.test.arca  backend.test.arca  http_full.test.arca  timing.test.arca  toolchain.test.arca
(+72 files in other folders)
