[workspace]
members = [
    "crates/arca-cli",
    "crates/arca-lexer",
    "crates/arca-diagnostics",
    "crates/arca-ast",
    "crates/arca-parser",
    "crates/arca-hir",
    "crates/arca-typechecker",
    "crates/arca-modules",
    "crates/arca-capabilities",
    "crates/arca-air",
    "crates/arca-pkg",
    "crates/arca-borrowck",
    "crates/arca-ffi",
    "crates/arca-rt",
    "crates/arca-fmt",
    "crates/arca-stdlib",
    "crates/arca-lsp",
    "crates/arca-backend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Arca Language Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/lutfi-haslab/project-arca"
repository = "https://github.com/lutfi-haslab/project-arca"
readme = "README.md"
