[package]
name = "arca-air"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arca-ast = { path = "../arca-ast" }
arca-diagnostics = { path = "../arca-diagnostics" }
arca-hir = { path = "../arca-hir" }
arca-typechecker = { path = "../arca-typechecker" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
arca-lexer = { path = "../arca-lexer" }
arca-parser = { path = "../arca-parser" }
