[package]
name = "arca-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
arca-air = { path = "../arca-air" }
arca-ast = { path = "../arca-ast" }
arca-hir = { path = "../arca-hir" }
arca-diagnostics = { path = "../arca-diagnostics" }
