[package]
name = "arca-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arca-ast = { path = "../arca-ast" }
arca-diagnostics = { path = "../arca-diagnostics" }
arca-lexer = { path = "../arca-lexer" }
arca-parser = { path = "../arca-parser" }
arca-hir = { path = "../arca-hir" }
arca-typechecker = { path = "../arca-typechecker" }
arca-modules = { path = "../arca-modules" }
arca-capabilities = { path = "../arca-capabilities" }
arca-air = { path = "../arca-air" }
arca-pkg = { path = "../arca-pkg" }
arca-borrowck = { path = "../arca-borrowck" }
serde_json = "1.0"
