[package]
name = "arca-hir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arca-ast = { path = "../arca-ast" }
arca-diagnostics = { path = "../arca-diagnostics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
arca-lexer = { path = "../arca-lexer" }
arca-parser = { path = "../arca-parser" }
