[package]
name = "arca-modules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arca-ast = { path = "../arca-ast" }
arca-diagnostics = { path = "../arca-diagnostics" }
arca-lexer = { path = "../arca-lexer" }
arca-parser = { path = "../arca-parser" }
arca-hir = { path = "../arca-hir" }
serde = { version = "1.0", features = ["derive"] }
